--- a/App.config
+++ b/App.config
@@ -5,8 +5,9 @@
     
   </configSections>
   <connectionStrings>
-    <add name="allN1.Properties.Settings.DBConnectionString"
-      connectionString="Data Source=.;Initial Catalog=AppDB;Persist Security Info=True;User ID=sa;Password=12345"
+    <add name="allN1.Properties.Settings.DBConnectionString" connectionString="Data Source=.;Initial Catalog=AppDB;Persist Security Info=True;User ID=sa;Password=12345"
+      providerName="System.Data.SqlClient" />
+    <add name="allN1.Properties.Settings.AppDBConnectionString" connectionString="Data Source=CORTEX;Initial Catalog=AppDB;Persist Security Info=True;User ID=sa;Password=12345"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
