--- a/packages.config
+++ b/packages.config
@@ -4,4 +4,5 @@
   <package id="RestSharp" version="105.1.0" targetFramework="net472" />
   <package id="TextmagicRest" version="1.0.0.5" targetFramework="net472" />
   <package id="Whatsapp.NET" version="1.2.2" targetFramework="net472" />
+  <package id="WordToPDF" version="1.0.0" targetFramework="net472" />
 </packages>
