--- a/allN1.csproj
+++ b/allN1.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addproduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addproduct.Designer.cs">
+      <DependentUpon>addproduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="bill_info.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +149,9 @@
     <Compile Include="vendor_bill.Designer.cs">
       <DependentUpon>vendor_bill.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="addproduct.resx">
+      <DependentUpon>addproduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="bill_info.resx">
       <DependentUpon>bill_info.cs</DependentUpon>
     </EmbeddedResource>
